aggiornata patch img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="box">
-                        <img src="img/img/" alt="">
+                        <img src="img/" alt="">
+                        <span>Bicycle</span>
                     </div>
                     <div class="box"></div>
                     <div class="box"></div>
