aggiunto img e span sulla prima riga

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Row -->
                 <div class="row">
                     <div class="box">
-                        <img src="img/" alt="">
+                        <img src="img/noun_Bicycle_3134821.png" alt="Bicycle">
                         <span>Bicycle</span>
                     </div>
                     <div class="box"></div>
