creato nuovo branch develop

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="box">
                         <img src="img/noun_Bicycle_3134821.png" alt="Bicycle">
-                        <span>Bicycle</span>
+                        <div class="text">Bicycle</div>
                     </div>
                     <div class="box"></div>
                     <div class="box"></div>
