aggiornato main con ultimi tag e footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     <div class="box">
                         <img src="img/noun_Cruise_Ship_3134824.png" alt="Cruise_Ship">
-                        <div class="text">Cruise_Ship</div>
+                        <div class="text">Cruise Ship</div>
                     </div>
 
                     <div class="box">
@@ -58,9 +58,9 @@
                         <div class="text">Tram</div>
                     </div>
 
-                    <div class="box">
+                    <div class="box" id="discovery">
                         <img src="img/noun_air_balloon_3134741.png" alt="air_balloon">
-                        <div class="text">air_balloon</div>
+                        <div class="text">Air Balloon</div>
                     </div>
 
                     <div class="box">
@@ -70,7 +70,7 @@
 
                     <div class="box">
                         <img src="img/noun_air_balloon_3134741.png" alt="air_balloon">
-                        <div class="text">air_balloon</div>
+                        <div class="text">Air Balloon</div>
                     </div>
 
                 </div>
@@ -81,7 +81,7 @@
 
                     <div class="box">
                         <img src="img/noun_Cruise_Ship_3134824.png" alt="Cruise_Ship">
-                        <div class="text">Cruise_Ship</div>
+                        <div class="text">Cruise Ship</div>
                     </div>
 
                     <div class="box">
