--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                         <img src="img/noun_Tram_3134750.png" alt="Tram">
                         <div class="text">Tram</div>
                     </div>
-
-                    <div class="box" id="discovery">
+                    <!-- No Hover -->
+                    <div class="box-no-hover">
                         <img src="img/noun_air_balloon_3134741.png" alt="air_balloon">
-                        <div class="text">Air Balloon</div>
+                        <div class="text-no-hover">Air Balloon</div>
                     </div>
-
+                    <!-- end No Hover -->
                     <div class="box">
                         <img src="img/noun_Bicycle_3134821.png" alt="Bicycle">
                         <div class="text">Bicycle</div>
