--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Spiegazione esercizio lezione 7 prima parte -->
+<!-- Spiegazione esercizio lezione 6 seconda parte e 7 prima parte
+    slide lezione 6 -->
 <html lang="en">
 
 <head>
